# learn_anything

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yaml  learn-anything.service  pyproject.toml  startup.sh
configs/: api_gateway.docker.example.toml  course_platform.docker.example.toml  course_platform.example.toml  db.env  logging.conf.yml  minio.env  test_consumer.toml
prometheus/: prometheus_config.yml
scripts/: check_rmq.sh  create_qemu_vm.sh  get_available_port.sh  init_playground_host.sh  init_playground_space.sh  run_from_docker.sh  setup_test_environment.sh
src/api_gateway/adapters/: logger.py
src/api_gateway/adapters/bootstrap/: tg_bot_di.py
src/api_gateway/adapters/metrics/: __init__.py
src/api_gateway/adapters/rmq/: config.py  manager.py  providers.py
src/api_gateway/main/: tg_bot.py
src/api_gateway/presentation/tg_bot/middlewares/: __logging.py  count_rps.py  send_to_queue.py
src/api_gateway/presentation/web/fastapi_routers/: tg.py
src/learn_anything/adapters/: json_serializers.py
src/learn_anything/adapters/auth/: errors.py  tg_auth.py  tg_auth_manager.py  tg_identity_provider.py
src/learn_anything/adapters/bootstrap/: di.py  tg_bot_di.py
src/learn_anything/adapters/consumer/: logger.py
src/learn_anything/adapters/metrics/: __init__.py  get_latency.py
src/learn_anything/adapters/persistence/: commiter.py  config.py  providers.py
src/learn_anything/adapters/persistence/alembic/: alembic.ini  config.py
src/learn_anything/adapters/persistence/mappers/: course.py  submission.py  task.py  user.py
src/learn_anything/adapters/persistence/tables/: course.py  map.py  submission.py  task.py  user.py
src/learn_anything/adapters/playground/: remote_playground.py  unix_playground.py
src/learn_anything/adapters/redis/: config.py
src/learn_anything/adapters/rmq/: initialisers.py  providers.py
src/learn_anything/adapters/s3/: config.py  s3_file_manager.py
src/learn_anything/api_gateway/adapters/: logger.py
src/learn_anything/api_gateway/adapters/bootstrap/: tg_bot_di.py
src/learn_anything/api_gateway/adapters/metrics/: __init__.py
src/learn_anything/api_gateway/main/: tg_bot.py
src/learn_anything/application/interactors/: authenticate.py  create_course.py  get_many_courses.py  register_for_course.py
src/learn_anything/application/ports/: playground.py
src/learn_anything/course_platform/adapters/: json_serializers.py  logger.py
src/learn_anything/course_platform/application/: errors.py  input_data.py
src/learn_anything/course_platform/domain/: error.py
src/learn_anything/course_platform/main/: consumer.py  tg_updates_consumer.py
src/learn_anything/domain/course/: errors.py  models.py  rules.py
src/learn_anything/domain/submission/: models.py  rules.py
src/learn_anything/domain/task/: errors.py  models.py  rules.py
src/learn_anything/domain/user/: errors.py  models.py  rules.py
src/learn_anything/domain/value_objects/: expires_at.py
src/learn_anything/entities/course/: errors.py  models.py  rules.py
src/learn_anything/entities/submission/: models.py  rules.py
src/learn_anything/entities/task/: enums.py  errors.py  models.py  rules.py  value_objects.py
src/learn_anything/entities/user/: enums.py  errors.py  models.py  rules.py  value_objects.py
src/learn_anything/entities/value_objects/: expires_at.py
src/learn_anything/main/: bot.py  cli.py  consumer.py  tg_bot.py
src/learn_anything/presentation/code_editor/: __init__.py
src/learn_anything/presentation/tg_bot/: config.py  exceptions.py
src/learn_anything/presentors/tg_bot/: templates.py
tests/integration/: conftest.py  test_consumer.py
tests/integration/scripts/: rm_test_environment.sh
tests/unit/: conftest.py  test_adapter_auth_errors.py  test_application_errors.py  test_create_course.py  test_delete_course.py  test_delete_task.py  test_domain_course_rules.py  test_domain_error.py  test_domain_task_rules.py  test_get_course.py  test_get_course_tasks.py  test_json_serializers.py  test_leave_course.py  test_persistence_config.py  test_publish_course.py  test_register_for_course.py  test_update_course.py
(+269 files in other folders)
