[tool.poetry]
name = "learn-anything"
version = "0.1.0"
description = "A bot for learning anything"
authors = ["akiko23"]
readme = "README.md"
packages = [{include = "learn_anything", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = '^3.13.0'
aio-pika = '^9.5.3'
alembic = '^1.13.2'
asyncpg = '^0.30.0'
dishka = '^1.4.1'
fastapi = '^0.115.6'
Jinja2 = '^3.1.4'
minio = '^7.2.12'
msgpack = '^1.1.0'
orjson = '^3.10.12'
psycopg = '^3.2.1'
pyyaml = '^6.0.2'
prometheus-client = '^0.21.1'
redis = '^5.0.8'
SQLAlchemy = '^2.0.34'
starlette-context = '^0.3.6'
toml = '^0.10.2'
uvicorn = '^0.34.0'
types-pyyaml = "^6.0.12.20240917"
paramiko = "^3.5.0"
gdown = "^5.2.0"

[tool.poetry.group.dev.dependencies]
mypy = '^1.11.2'
ruff = '^0.6.5'
isort = '^5.13.2'
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.poetry.scripts]
learn-anything = "learn_anything.main.cli:main"

[tool.mypy]
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.mypy",
]
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_reexport = false
exclude = [
    "^conf/",
    "^tests/",
    "^utils/",
    "^.venv/",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = false  # to allow parsing
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "prometheus_client.*",
    "starlette_prometheus.*",
    "uvicorn.*",
    "toml.*",
    "msgpack.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: integration tests (Docker, Postgres, Redis, RabbitMQ required)",
]

[tool.coverage.run]
source = ["src/learn_anything"]
# Исключаем: handlers, presentors (приоритет — домен и application), api_gateway (отдельный сервис)
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/alembic/versions/*",
    "**/presentation/tg_bot/handlers/**",
    "**/presentors/**",
    "**/api_gateway/**",
]
branch = true

[tool.coverage.report]
fail_under = 30
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
